in process: fix test for auth and session save in db
